gen/com/intellij/plugins/thrift/lang/parser/ThriftParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.plugins.thrift.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import com.intellij.lang.LanguageVersion;
import com.intellij.openapi.diagnostic.Logger;
import static com.intellij.plugins.thrift.lang.lexer.ThriftTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ThriftParser implements PsiParser {

  public static final Logger LOG_ = Logger.getInstance("com.intellij.plugins.thrift.lang.parser.ThriftParser");

  public ASTNode parse(IElementType root_, PsiBuilder builder_, LanguageVersion _languageVersion) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    if (root_ == BASE_TYPE) {
      result_ = BaseType(builder_, 0);
    }
    else if (root_ == CONST) {
      result_ = Const(builder_, 0);
    }
    else if (root_ == CONST_LIST) {
      result_ = ConstList(builder_, 0);
    }
    else if (root_ == CONST_MAP) {
      result_ = ConstMap(builder_, 0);
    }
    else if (root_ == CONST_VALUE) {
      result_ = ConstValue(builder_, 0);
    }
    else if (root_ == CONTAINER_TYPE) {
      result_ = ContainerType(builder_, 0);
    }
    else if (root_ == CPP_TYPE) {
      result_ = CppType(builder_, 0);
    }
    else if (root_ == CUSTOM_TYPE) {
      result_ = CustomType(builder_, 0);
    }
    else if (root_ == DEFINITION_NAME) {
      result_ = DefinitionName(builder_, 0);
    }
    else if (root_ == DOUBLE_CONSTANT) {
      result_ = DoubleConstant(builder_, 0);
    }
    else if (root_ == ENUM) {
      result_ = Enum(builder_, 0);
    }
    else if (root_ == EXCEPTION) {
      result_ = Exception(builder_, 0);
    }
    else if (root_ == FIELD) {
      result_ = Field(builder_, 0);
    }
    else if (root_ == FIELD_ID) {
      result_ = FieldID(builder_, 0);
    }
    else if (root_ == FIELD_REQ) {
      result_ = FieldReq(builder_, 0);
    }
    else if (root_ == FIELD_TYPE) {
      result_ = FieldType(builder_, 0);
    }
    else if (root_ == FUNCTION) {
      result_ = Function(builder_, 0);
    }
    else if (root_ == FUNCTION_TYPE) {
      result_ = FunctionType(builder_, 0);
    }
    else if (root_ == GENERIC_TYPE) {
      result_ = GenericType(builder_, 0);
    }
    else if (root_ == INCLUDE) {
      result_ = Include(builder_, 0);
    }
    else if (root_ == INT_CONSTANT) {
      result_ = IntConstant(builder_, 0);
    }
    else if (root_ == LIST_SEPARATOR) {
      result_ = ListSeparator(builder_, 0);
    }
    else if (root_ == LIST_TYPE) {
      result_ = ListType(builder_, 0);
    }
    else if (root_ == MAP_TYPE) {
      result_ = MapType(builder_, 0);
    }
    else if (root_ == NAMESPACE) {
      result_ = Namespace(builder_, 0);
    }
    else if (root_ == NAMESPACE_SCOPE) {
      result_ = NamespaceScope(builder_, 0);
    }
    else if (root_ == SENUM) {
      result_ = Senum(builder_, 0);
    }
    else if (root_ == SERVICE) {
      result_ = Service(builder_, 0);
    }
    else if (root_ == SERVICE_SUPER_NAME) {
      result_ = ServiceSuperName(builder_, 0);
    }
    else if (root_ == SET_TYPE) {
      result_ = SetType(builder_, 0);
    }
    else if (root_ == SIMPLE_BASE_TYPE) {
      result_ = SimpleBaseType(builder_, 0);
    }
    else if (root_ == STRUCT) {
      result_ = Struct(builder_, 0);
    }
    else if (root_ == THROWS) {
      result_ = Throws(builder_, 0);
    }
    else if (root_ == TYPE_ANNOTATION) {
      result_ = TypeAnnotation(builder_, 0);
    }
    else if (root_ == TYPE_ANNOTATION_LIST) {
      result_ = TypeAnnotationList(builder_, 0);
    }
    else if (root_ == TYPE_ANNOTATIONS) {
      result_ = TypeAnnotations(builder_, 0);
    }
    else if (root_ == TYPEDEF) {
      result_ = Typedef(builder_, 0);
    }
    else if (root_ == UNION) {
      result_ = Union(builder_, 0);
    }
    else if (root_ == XSD_ATTRS) {
      result_ = XsdAttrs(builder_, 0);
    }
    else if (root_ == XSD_FIELD_OPTIONS) {
      result_ = XsdFieldOptions(builder_, 0);
    }
    else if (root_ == ENUM_FIELD) {
      result_ = enumField(builder_, 0);
    }
    else if (root_ == ENUM_FIELDS) {
      result_ = enumFields(builder_, 0);
    }
    else if (root_ == FIELDS) {
      result_ = fields(builder_, 0);
    }
    else if (root_ == SEMUN_FIELD) {
      result_ = semunField(builder_, 0);
    }
    else if (root_ == SENUM_BODY) {
      result_ = senumBody(builder_, 0);
    }
    else if (root_ == SERVICE_BODY) {
      result_ = serviceBody(builder_, 0);
    }
    else {
      result_ = parse_root_(root_, builder_, 0);
    }
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
    return builder_.getTreeBuilt();
  }

  protected boolean parse_root_(final IElementType root_, final PsiBuilder builder_, final int level_) {
    return Document(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // SimpleBaseType TypeAnnotations?
  public static boolean BaseType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "BaseType")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<base type>");
    result_ = SimpleBaseType(builder_, level_ + 1);
    result_ = result_ && BaseType_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, BASE_TYPE, result_, false, null);
    return result_;
  }

  // TypeAnnotations?
  private static boolean BaseType_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "BaseType_1")) return false;
    TypeAnnotations(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // 'const' FieldType DefinitionName '=' ConstValue ListSeparator?
  public static boolean Const(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Const")) return false;
    boolean result_;
    boolean pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<const>");
    result_ = consumeToken(builder_, "const");
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, FieldType(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, DefinitionName(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, EQUALS)) && result_;
    result_ = pinned_ && report_error_(builder_, ConstValue(builder_, level_ + 1)) && result_;
    result_ = pinned_ && Const_5(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, CONST, result_, pinned_, null);
    return result_ || pinned_;
  }

  // ListSeparator?
  private static boolean Const_5(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Const_5")) return false;
    ListSeparator(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // '[' (ConstValue ListSeparator?)* ']'
  public static boolean ConstList(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstList")) return false;
    if (!nextTokenIs(builder_, LEFTBRACKET)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFTBRACKET);
    result_ = result_ && ConstList_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHTBRACKET);
    exit_section_(builder_, marker_, CONST_LIST, result_);
    return result_;
  }

  // (ConstValue ListSeparator?)*
  private static boolean ConstList_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstList_1")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!ConstList_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "ConstList_1", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  // ConstValue ListSeparator?
  private static boolean ConstList_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstList_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = ConstValue(builder_, level_ + 1);
    result_ = result_ && ConstList_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ListSeparator?
  private static boolean ConstList_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstList_1_0_1")) return false;
    ListSeparator(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // '{' (ConstValue ':' ConstValue ListSeparator?)* '}'
  public static boolean ConstMap(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstMap")) return false;
    if (!nextTokenIs(builder_, LEFTCURLYBRACE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LEFTCURLYBRACE);
    result_ = result_ && ConstMap_1(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RIGHTCURLYBRACE);
    exit_section_(builder_, marker_, CONST_MAP, result_);
    return result_;
  }

  // (ConstValue ':' ConstValue ListSeparator?)*
  private static boolean ConstMap_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstMap_1")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!ConstMap_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "ConstMap_1", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  // ConstValue ':' ConstValue ListSeparator?
  private static boolean ConstMap_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstMap_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = ConstValue(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, COLON);
    result_ = result_ && ConstValue(builder_, level_ + 1);
    result_ = result_ && ConstMap_1_0_3(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ListSeparator?
  private static boolean ConstMap_1_0_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstMap_1_0_3")) return false;
    ListSeparator(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // IntConstant | DoubleConstant | Literal | Identifier | ConstList | ConstMap
  public static boolean ConstValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ConstValue")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<const value>");
    result_ = IntConstant(builder_, level_ + 1);
    if (!result_) result_ = DoubleConstant(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, LITERAL);
    if (!result_) result_ = consumeToken(builder_, IDENTIFIER);
    if (!result_) result_ = ConstList(builder_, level_ + 1);
    if (!result_) result_ = ConstMap(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, CONST_VALUE, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // SimpleContainerType TypeAnnotations?
  public static boolean ContainerType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ContainerType")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<container type>");
    result_ = SimpleContainerType(builder_, level_ + 1);
    result_ = result_ && ContainerType_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, CONTAINER_TYPE, result_, false, null);
    return result_;
  }

  // TypeAnnotations?
  private static boolean ContainerType_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ContainerType_1")) return false;
    TypeAnnotations(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // 'cpp_type' Literal
  public static boolean CppType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CppType")) return false;
    boolean result_;
    boolean pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<cpp type>");
    result_ = consumeToken(builder_, "cpp_type");
    pinned_ = result_; // pin = 1
    result_ = result_ && consumeToken(builder_, LITERAL);
    exit_section_(builder_, level_, marker_, CPP_TYPE, result_, pinned_, null);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // Identifier
  public static boolean CustomType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CustomType")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, marker_, CUSTOM_TYPE, result_);
    return result_;
  }

  /* ********************************************************** */
  // Identifier
  public static boolean DefinitionName(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DefinitionName")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    exit_section_(builder_, marker_, DEFINITION_NAME, result_);
    return result_;
  }

  /* ********************************************************** */
  // topLevelElement*
  static boolean Document(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Document")) return false;
    int pos_ = current_position_(builder_);
    while (true) {
      if (!topLevelElement(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "Document", pos_)) break;
      pos_ = current_position_(builder_);
    }
    return true;
  }

  /* ********************************************************** */
  // ('+' | '-')? Number
  public static boolean DoubleConstant(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<double constant>");
    result_ = DoubleConstant_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, NUMBER);
    exit_section_(builder_, level_, marker_, DOUBLE_CONSTANT, result_, false, null);
    return result_;
  }

  // ('+' | '-')?
  private static boolean DoubleConstant_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant_0")) return false;
    DoubleConstant_0_0(builder_, level_ + 1);
    return true;
  }

  // '+' | '-'
  private static boolean DoubleConstant_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DoubleConstant_0_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, PLUS);
    if (!result_) result_ = consumeToken(builder_, MINUS);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // 'enum' DefinitionName '{' enumFields '}' TypeAnnotations?
  public static boolean Enum(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Enum")) return false;
    boolean result_;
    boolean pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<enum>");
    result_ = consumeToken(builder_, "enum");
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, DefinitionName(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, LEFTCURLYBRACE)) && result_;
    result_ = pinned_ && report_error_(builder_, enumFields(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, RIGHTCURLYBRACE)) && result_;
    result_ = pinned_ && Enum_5(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, ENUM, result_, pinned_, null);
    return result_ || pinned_;
  }

  // TypeAnnotations?
  private static boolean Enum_5(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Enum_5")) return false;
    TypeAnnotations(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // 'exception' DefinitionName '{' fields '}' TypeAnnotations?
  public static boolean Exception(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Exception")) return false;
    boolean result_;
    boolean pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<exception>");
    result_ = consumeToken(builder_, "exception");
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, DefinitionName(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, LEFTCURLYBRACE)) && result_;
    result_ = pinned_ && report_error_(builder_, fields(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, RIGHTCURLYBRACE)) && result_;
    result_ = pinned_ && Exception_5(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, EXCEPTION, result_, pinned_, null);
    return result_ || pinned_;
  }

  // TypeAnnotations?
  private static boolean Exception_5(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Exception_5")) return false;
    TypeAnnotations(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // FieldID? FieldReq? FieldType DefinitionName ('=' ConstValue)? XsdFieldOptions TypeAnnotations? ListSeparator?
  public static boolean Field(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field")) return false;
    boolean result_;
    boolean pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<field>");
    result_ = Field_0(builder_, level_ + 1);
    result_ = result_ && Field_1(builder_, level_ + 1);
    result_ = result_ && FieldType(builder_, level_ + 1);
    pinned_ = result_; // pin = 3
    result_ = result_ && report_error_(builder_, DefinitionName(builder_, level_ + 1));
    result_ = pinned_ && report_error_(builder_, Field_4(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, XsdFieldOptions(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, Field_6(builder_, level_ + 1)) && result_;
    result_ = pinned_ && Field_7(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, FIELD, result_, pinned_, fieldRecovery_parser_);
    return result_ || pinned_;
  }

  // FieldID?
  private static boolean Field_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_0")) return false;
    FieldID(builder_, level_ + 1);
    return true;
  }

  // FieldReq?
  private static boolean Field_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_1")) return false;
    FieldReq(builder_, level_ + 1);
    return true;
  }

  // ('=' ConstValue)?
  private static boolean Field_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_4")) return false;
    Field_4_0(builder_, level_ + 1);
    return true;
  }

  // '=' ConstValue
  private static boolean Field_4_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_4_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, EQUALS);
    result_ = result_ && ConstValue(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // TypeAnnotations?
  private static boolean Field_6(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_6")) return false;
    TypeAnnotations(builder_, level_ + 1);
    return true;
  }

  // ListSeparator?
  private static boolean Field_7(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Field_7")) return false;
    ListSeparator(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // IntConstant ':'
  public static boolean FieldID(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "FieldID")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<field id>");
    result_ = IntConstant(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, COLON);
    exit_section_(builder_, level_, marker_, FIELD_ID, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // 'required' | 'optional'
  public static boolean FieldReq(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "FieldReq")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<field req>");
    result_ = consumeToken(builder_, "required");
    if (!result_) result_ = consumeToken(builder_, "optional");
    exit_section_(builder_, level_, marker_, FIELD_REQ, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // BaseType | ContainerType | CustomType
  public static boolean FieldType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "FieldType")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<field type>");
    result_ = BaseType(builder_, level_ + 1);
    if (!result_) result_ = ContainerType(builder_, level_ + 1);
    if (!result_) result_ = CustomType(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, FIELD_TYPE, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // 'oneway'? FunctionType DefinitionName '(' fieldsWithBraceRecovery ')' Throws? TypeAnnotations?
  public static boolean Function(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Function")) return false;
    boolean result_;
    boolean pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, "<function>");
    result_ = Function_0(builder_, level_ + 1);
    result_ = result_ && FunctionType(builder_, level_ + 1);
    result_ = result_ && DefinitionName(builder_, level_ + 1);
    pinned_ = result_; // pin = 3
    result_ = result_ && report_error_(builder_, consumeToken(builder_, LEFTBRACE));
    result_ = pinned_ && report_error_(builder_, fieldsWithBraceRecovery(builder_, level_ + 1)) && result_;
    result_ = pinned_ && report_error_(builder_, consumeToken(builder_, RIGHTBRACE)) && result_;
    result_ = pinned_ && report_error_(builder_, Function_6(builder_, level_ + 1)) && result_;
    result_ = pinned_ && Function_7(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, FUNCTION, result_, pinned_, functionRecovery_parser_);
    return result_ || pinned_;
  }
